--- a/index.html
+++ b/index.html
@@ -12,10 +12,7 @@
 <body>
     <h1>Tic Tac Toe</h1>
     <div class="container">
-        <div class="player 1">player1</div>
-        <div class="player 1">X</div>
-        <div class="player 2">player2</div>
-        <div class="player 2">O</div>
+
     </div>
     <ul class="board">
         <li>a</li>
@@ -33,6 +30,7 @@
         <button class="restart">Restart</button>
     </div>
 
+    <script src="main.js"></script>
 </body>
 
 </html>
