--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
     <ul class="board">
     </ul>
-    <h2>player 1 wins!</h2>
+    <h2>placeholder</h2>
     <div class="button-container">
         <button class="restart">Restart</button>
     </div>
